syntax = "proto3";

package ypb;
option go_package = "/;ypb";
import "message.proto";


service CodecService {
  // 编码解码
  rpc Codec(CodecRequest) returns (CodecResponse);
  // 尝试自动解码
  rpc AutoDecode(AutoDecodeRequest) returns (AutoDecodeResponse);
}

message AutoDecodeResult {
  string Type = 1;
  string TypeVerbose = 2;
  bytes Origin = 3;
  bytes Result = 4;
}


message AutoDecodeResponse {
  repeated AutoDecodeResult Results = 1;
}

message AutoDecodeRequest {
  string Data = 1;
}


message CodecRequest {
  string Text = 1;
  string Type = 2;
  bool Auto = 3;
  repeated ExecParamItem Params = 4;
  string ScriptName = 5;

  // 如果 InputBytes 设置了，将会无条件覆盖 Text
  bytes InputBytes = 6;
}

message CodecResponse {
  string Result = 1;
}